--- a/playbook.yaml
+++ b/playbook.yaml
@@ -79,6 +79,7 @@
             theme: agnoster
             write_zshrc: true
             plugins:
+              - azure-cli
               - git
               - zsh-syntax-highlighting
               - zsh-autosuggestions
@@ -233,6 +234,13 @@
         force: yes
       register: packer
       changed_when: ( packer.remote_url_changed is not defined or packer.remote_url_changed )
+    - name: Install zsh azure
+      ansible.builtin.git:
+        repo: https://github.com/danarth/azure-cli.zsh
+        dest: "{{ HOME }}/.oh-my-zsh/plugins/azure-cli"
+        force: yes
+      register: azure-cli
+      changed_when: ( azure-cli.remote_url_changed is not defined or azure-cli.remote_url_changed )
     - name: Ensure .vim/{autoload,bundle} directory exists
       file:
         path: "{{ item }}"
