--- a/playbook.yaml
+++ b/playbook.yaml
@@ -236,11 +236,11 @@
       changed_when: ( packer.remote_url_changed is not defined or packer.remote_url_changed )
     - name: Install zsh azure
       ansible.builtin.git:
-        repo: https://github.com/danarth/azure-cli.zsh
+        repo: https://github.com/danarth/azure-cli.zsh.git
         dest: "{{ HOME }}/.oh-my-zsh/plugins/azure-cli"
         force: yes
-      register: azure-cli
-      changed_when: ( azure-cli.remote_url_changed is not defined or azure-cli.remote_url_changed )
+      register: azurecli
+      changed_when: ( azurecli.remote_url_changed is not defined or azurecli.remote_url_changed )
     - name: Ensure .vim/{autoload,bundle} directory exists
       file:
         path: "{{ item }}"
