--- a/playbook.yaml
+++ b/playbook.yaml
@@ -40,6 +40,7 @@
       - git-lfs
       - gh
       - go
+      - hugo
       - jq
       - libxslt
       - lolcat
@@ -188,6 +189,7 @@
           - {name: "ui.color",   value: "True" }
           - {name: "core.editor",   value: "vim" }
           - {name: "core.excludesfile", value: "{{ HOME }}/.gitignore"}
+          - {name: "init.defaultBranch", value: "main" }
     - name: byobu preferences directory
       file:
         path: "{{ HOME }}/.byobu"
