updating removed cask packages

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -115,10 +115,11 @@
 
     install_homebrew_if_missing: true
     upgrade_homebrew_packages: true
-    # python_modules:
-    #   - configparser
-    #   - pylint
-    #   - virtualenv
+    python_modules:
+      - configparser
+      - pylint
+      - virtualenv
+      - jupyterlab
   roles:
     - role: gantsign.oh-my-zsh
       users:
@@ -209,11 +210,11 @@
       until: result is successful
       when: homebrew_check.stat.exists
 
-    # - name: Installing Python Modules
-    #   pip:
-    #     name: "{{ item }}"
-    #     state: present
-    #   with_items: '{{ python_modules }}'
+    - name: Installing Python Modules
+      with_items: '{{ python_modules }}'
+      pip:
+        name: "{{ item }}"
+        state: present
 
     - name: Configure Ansible
       ini_file:
